--- a/Web_bar/index.html
+++ b/Web_bar/index.html
@@ -46,7 +46,7 @@
       </nav>
     </header>
 
-      <div class="row">
+      <div class="row-0">
         <div class="col">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
@@ -71,7 +71,7 @@
             </div>
           </div>
       </div>
-      <div class="row text-light">
+      <div class="row-0 text-light">
         <div>
           <h1 class="dotted py-2" style="text-align: center;">
             Nyitvatartás
@@ -90,6 +90,8 @@
 
 
 
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
